2017-04-24  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version

	* src/parse.cpp (getTable): Condition print statement on verbose mode

	* tests/arrays.Rout.save: Update reference output
	* tests/tomlExamples.Rout.save: Idem

2017-03-26  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.1.2

	* src/init.c (R_init_RcppTOML): all R_registerRoutines()
	and R_useDynamicSymbols()
	* NAMESPACE: Use .registration=TRUE on useDynLib

        * LICENSE: Added to repository
        * .Rbuildignore: Do not include LICENSE in package

	* inst/toml/ex4.toml (bla): Uncomment Datetimevector

	* inst/toml/example.toml: Updated to upstream README.md version

	* README.md: Expanded with example and screenshot
	* local/emacsAndTOML.png: Added for README
        * .Rbuildignore: Do not include local/ in package

2017-03-25  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version

	* src/parse.cpp (tomlparseImpl): Correct TableArray type assignment

	* tests/arrays.Rout.save: Update reference output
	* tests/tomlExamples.Rout.save: Ditto

	* .codecov.yml (comment): Add coverage support
	* .travis.yml: Ditto

2017-03-17  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version

	* src/parse.cpp (collapsedList): Preserve type for Date and
	Datetime vectors as well as boolean vectors

2017-02-12  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.1.1

2017-02-08  Dirk Eddelbuettel  <edd@max.eddelbuettel.com>

	* inst/include/cpptoml.h: Sync'ed with cpptoml upstream

2017-01-29  Dirk Eddelbuettel  <edd@debian.org>

	* R/parseToml.R: Output from print.toml() method without final
	NULL

        * tests/arrays.Rout.save: Updated reference output
        * tests/bool_datetime.Rout.save: Idem
        * tests/float.Rout.save: Idem
        * tests/integer.Rout.save: Idem
        * tests/strings.Rout.save: Idem