@@ -110,10 +110,16 @@ List of 10
   .. ..$ physical:List of 2
   .. .. ..$ color: chr "red"
   .. .. ..$ shape: chr "round"
-  .. ..$         : chr "variety"
+  .. ..$ variety :Dotted pair list of 2
+  .. .. ..$ :List of 1
+  .. .. .. ..$ name: chr "red delicious"
+  .. .. ..$ :List of 1
+  .. .. .. ..$ name: chr "granny smith"
   ..$ :List of 2
-  .. ..$ name: chr "banana"
-  .. ..$     : chr "variety"
+  .. ..$ name   : chr "banana"
+  .. ..$ variety:Dotted pair list of 1
+  .. .. ..$ :List of 1
+  .. .. .. ..$ name: chr "plantain"
  $ integer :List of 5
   ..$ key1       : int 99
   ..$ key2       : int 42
@@ -169,4 +175,4 @@ List of 10
 > 
 > proc.time()
    user  system elapsed 
-  0.364   0.020   0.377 
+  0.380   0.008   0.380 
